# Note_to_ROS

./: Cpp_Note.md  Linux_note.md  README.md  ROS Note.md  ROS_Note.md  Typora Note.md  cartographer_install_note.md  cartographer_note.md  cartographer_slam_note.md  git_note.md  run_localization.sh
tools/: CMakeLists.txt  README.md
tools/data/: plot_Z_Accel_example.txt  test_graph.g2o
tools/script/: display6pic.py  get_image_from_bag.py  plot_Z_Accel.py  plot_categories.py  plot_g2o.py  pub_image.py  save_image_from_topic.py
tools/src/: add_pcd.cpp  cal_camera2imu.cpp  cal_gt_200.cpp  do_gicp_head_tail.cpp  do_icp.cpp  down_filtered_pcd.cpp  extract_plan.cpp  four_param_tf.cpp  get_box_point_for_cab.cpp  get_mean_pose_from_hdl.cpp  gnss_from_log.cpp  normal_pcd.cpp  read_gicp_result.cpp  read_pose_from_jpu.cpp  read_xml.cpp  remove_car.cpp  remove_outlier_pt.cpp  rotation_pcd_to_horizon_pcl.cpp  run_hba.cpp  run_hdl.cpp  run_livo.cpp  run_livos.cpp  save_image.py  test.cpp  trans_gt_world.cpp  trans_gt_world_bak.cpp
